# pong

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: build.yml  build_linux.yml  build_windows.yml  release.yaml
Game/: CMakeLists.txt
Game/source/: main.cpp
Models/: CMakeLists.txt
Models/include/: ball.hpp  board.hpp  material.hpp  score.hpp
Models/source/: ball.cpp  board.cpp  material.cpp  score.cpp
cmake/: Coverage.cmake  GitVersion.cmake
